refactor: Update HTML comments to remove HTTrack mirror references

--- a/frontend/admission.html
+++ b/frontend/admission.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/admission.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:05 GMT -->
+<!--  -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -240,7 +240,7 @@
                     <div class="rts-ap-section">
                         <h3 class="rts-section-title mb--30">Application Details</h3>
                         <div class="rts-application-form" >
-                            <form action="https://html.themewant.com/unipix/admission-form-data.php" method="POST" enctype="multipart/form-data" id="admission-form">
+                            <form action="https://html.themewant.comadmission-form-data.php" method="POST" enctype="multipart/form-data" id="admission-form">
                                 <div class="single-form-part">
                                     <h5 class="form-title">Personal Information</h5>
                                     <div class="single-input">
@@ -676,5 +676,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/admission.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:05 GMT -->
+<!--  -->
 </html>
