--- a/frontend/faculty-details.html
+++ b/frontend/faculty-details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/faculty-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:00 GMT -->
+<!-- faculty-details.html , Tue, 01 Apr 2025 16:00:00 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -487,5 +487,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/faculty-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:01 GMT -->
+<!-- faculty-details.html , Tue, 01 Apr 2025 16:00:01 GMT -->
 </html>
