--- a/frontend/faculty.html
+++ b/frontend/faculty.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/faculty.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:58 GMT -->
+<!-- faculty.html , Tue, 01 Apr 2025 15:59:58 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -644,5 +644,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/faculty.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:00 GMT -->
+<!-- faculty.html , Tue, 01 Apr 2025 16:00:00 GMT -->
 </html>
