--- a/frontend/index-three.html
+++ b/frontend/index-three.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/index-three.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:28 GMT -->
+<!-- index-three.html , Tue, 01 Apr 2025 15:59:28 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -997,5 +997,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/index-three.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:33 GMT -->
+<!-- index-three.html , Tue, 01 Apr 2025 15:59:33 GMT -->
 </html>
