--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1197,5 +1197,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:58:49 GMT -->
+<!-- index.html , Tue, 01 Apr 2025 15:58:49 GMT -->
 </html>
