--- a/frontend/notice-details.html
+++ b/frontend/notice-details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/notice-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:34 GMT -->
+<!-- notice-details.html , Tue, 01 Apr 2025 16:00:34 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -845,5 +845,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/notice-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:36 GMT -->
+<!-- notice-details.html , Tue, 01 Apr 2025 16:00:36 GMT -->
 </html>
