--- a/frontend/academic.html
+++ b/frontend/academic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/academic.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:04 GMT -->
+<!--  -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -709,5 +709,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/academic.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:05 GMT -->
+<!-- academic.html , Tue, 01 Apr 2025 16:00:05 GMT -->
 </html>
