--- a/frontend/alumni.html
+++ b/frontend/alumni.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/alumni.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:08 GMT -->
+<!-- alumni.html , Tue, 01 Apr 2025 16:00:08 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -767,5 +767,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/alumni.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:10 GMT -->
+<!-- alumni.html , Tue, 01 Apr 2025 16:00:10 GMT -->
 </html>
