--- a/frontend/assets/fonts/fa-duotone-901.html
+++ b/frontend/assets/fonts/fa-duotone-901.html
@@ -2,7 +2,7 @@
 <html lang="en-us" prefix="content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#">
 
 
-<!-- Mirrored from html.themewant.com/unipix/assets/fonts/fa-duotone-901.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:21 GMT -->
+<!-- assets/fonts/fa-duotone-901.html , Tue, 01 Apr 2025 16:00:21 GMT -->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <style type="text/css">
@@ -61,5 +61,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/assets/fonts/fa-duotone-901.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:21 GMT -->
+<!-- assets/fonts/fa-duotone-901.html , Tue, 01 Apr 2025 16:00:21 GMT -->
 </html>
