--- a/frontend/athletics.html
+++ b/frontend/athletics.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/athletics.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:48 GMT -->
+<!-- athletics.html , Tue, 01 Apr 2025 15:59:48 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -603,5 +603,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/athletics.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:53 GMT -->
+<!-- athletics.html , Tue, 01 Apr 2025 15:59:53 GMT -->
 </html>
