--- a/frontend/blog-details.html
+++ b/frontend/blog-details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/blog-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:14 GMT -->
+<!-- blog-details.html , Tue, 01 Apr 2025 16:00:14 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -617,5 +617,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/blog-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:16 GMT -->
+<!-- blog-details.html , Tue, 01 Apr 2025 16:00:16 GMT -->
 </html>
