--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:12 GMT -->
+<!-- blog.html , Tue, 01 Apr 2025 16:00:12 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -596,5 +596,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:13 GMT -->
+<!-- blog.html , Tue, 01 Apr 2025 16:00:13 GMT -->
 </html>
