--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:16 GMT -->
+<!-- contact.html , Tue, 01 Apr 2025 16:00:16 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -546,5 +546,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:17 GMT -->
+<!-- contact.html , Tue, 01 Apr 2025 16:00:17 GMT -->
 </html>
