--- a/frontend/department-details.html
+++ b/frontend/department-details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/department-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:10 GMT -->
+<!-- department-details.html , Tue, 01 Apr 2025 16:00:10 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -642,5 +642,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/department-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:10 GMT -->
+<!-- department-details.html , Tue, 01 Apr 2025 16:00:10 GMT -->
 </html>
