--- a/frontend/event.html
+++ b/frontend/event.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/event.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:10 GMT -->
+<!-- event.html , Tue, 01 Apr 2025 16:00:10 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -675,5 +675,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/event.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:12 GMT -->
+<!-- event.html , Tue, 01 Apr 2025 16:00:12 GMT -->
 </html>
