--- a/frontend/faculty-sub.html
+++ b/frontend/faculty-sub.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/faculty-sub.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:53 GMT -->
+<!-- faculty-sub.html , Tue, 01 Apr 2025 15:59:53 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -705,5 +705,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/faculty-sub.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:57 GMT -->
+<!-- faculty-sub.html , Tue, 01 Apr 2025 15:59:57 GMT -->
 </html>
