--- a/frontend/index-two.html
+++ b/frontend/index-two.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/index-two.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:19 GMT -->
+<!-- index-two.html , Tue, 01 Apr 2025 15:59:19 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1235,5 +1235,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/index-two.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:28 GMT -->
+<!-- index-two.html , Tue, 01 Apr 2025 15:59:28 GMT -->
 </html>
