--- a/frontend/research.html
+++ b/frontend/research.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/research.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:01 GMT -->
+<!-- research.html , Tue, 01 Apr 2025 16:00:01 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -590,5 +590,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/research.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:04 GMT -->
+<!-- research.html , Tue, 01 Apr 2025 16:00:04 GMT -->
 </html>
