--- a/frontend/scholarship.html
+++ b/frontend/scholarship.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/scholarship.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:07 GMT -->
+<!-- scholarship.html , Tue, 01 Apr 2025 16:00:07 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -735,5 +735,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/scholarship.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:07 GMT -->
+<!-- scholarship.html , Tue, 01 Apr 2025 16:00:07 GMT -->
 </html>
