--- a/frontend/tution-fee.html
+++ b/frontend/tution-fee.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/tution-fee.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:08 GMT -->
+<!-- tution-fee.html , Tue, 01 Apr 2025 16:00:08 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -701,5 +701,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/tution-fee.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 16:00:08 GMT -->
+<!-- tution-fee.html , Tue, 01 Apr 2025 16:00:08 GMT -->
 </html>
