Remove research.html, update scholarship and tuition fee HTML comments, add MIT License, create README.md, implement login page with CSS and JS, and add login functionality.

--- a/frontend/about.html
+++ b/frontend/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from html.themewant.com/unipix/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:44 GMT -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,20 +44,20 @@
                             <div class="navigation">
                                 <nav class="navigation__menu">
                                     <ul>
-                                        <li class="navigation__menu--item has-child has-arrow">
-                                            <a href="javascript:void(0);" class="navigation__menu--item__link">Home</a>
-                                            <ul class="submenu sub__style">
+                                        <li class="navigation__menu--item has-child has-arrow7">
+                                            <a href="index-two.html" class="navigation__menu--item__link">Home</a>
+                                            <!--<ul class="submenu sub__style">
                                                 <li><a href="index.html">Home Style One</a></li>
                                                 <li><a href="index-two.html">Home Style Two</a></li>
                                                 <li><a href="index-three.html">Home Style three</a></li>
                                                 <li><a href="index-four.html">Home Style four</a></li>
                                                 <li><a href="index-five.html">Home Style five</a></li>
-                                            </ul>
+                                            </ul>-->
                                         </li>
 
-                                        <li class="navigation__menu--item has-child has-arrow">
-                                            <a href="javascript:void(0);" class="navigation__menu--item__link">Pages</a>
-                                            <ul class="submenu sub__style">
+                                        <li class="navigation__menu--item has-child has-arrow7">
+                                            <a href="about.html" class="navigation__menu--item__link">About</a>
+                                            <!--<ul class="submenu sub__style">
                                                 <li><a href="about.html">About</a></li>
                                                 <li><a href="athletics.html">Athletics</a></li>
                                                 <li class="has-child has-arrow">
@@ -70,7 +70,7 @@
                                                     </ul>
                                                 </li>
                                                 <li><a href="research.html">Research</a></li>
-                                            </ul>
+                                            </ul>-->
                                         </li>
                                         <li class="navigation__menu--item has-child has-arrow">
                                             <a href="#" class="navigation__menu--item__link">Academics</a>
@@ -469,10 +469,10 @@
                                 </div>
                                 <!-- rts arrow -->
                                 <div class="rts-slider-arrow testimonial-arrow">
-                                    <div class="rt-slider-btn rt-next">
+                                    <div class="rt-slider-btn rt-next" style="border-color: #7494ec;">
                                         <i class="fa-solid fa-chevron-left"></i>
                                     </div>
-                                    <div class="rt-slider-btn rt-prev">
+                                    <div class="rt-slider-btn rt-prev" style="border-color: #7494ec;">
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
                                 </div>
@@ -745,5 +745,5 @@
 </body>
 
 
-<!-- Mirrored from html.themewant.com/unipix/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 01 Apr 2025 15:59:48 GMT -->
+
 </html>
